--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.ljh</groupId>
+  <groupId>com.ssm</groupId>
   <artifactId>ssm-crud</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <modules>
+    <module>ssm-pojo</module>
+    <module>ssm-dao</module>
+    <module>ssm-service</module>
+    <module>ssm-api</module>
+    <module>ssm-common</module>
+  </modules>
+
+  <name>ssm-crud</name>
+
 
 
   <!--引入项目依赖的jar包 -->
@@ -111,7 +121,7 @@
       <scope>provided</scope>
     </dependency>
 
-      <dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.0.1</version>
@@ -125,7 +135,5 @@
       <version>4.12</version>
     </dependency>
   </dependencies>
-
-
 
 </project>
